--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hyper-router",
-  "version": "0.1.2",
+  "version": "v0.1.3",
   "description": "URL router for HyperApp",
   "main": "router.js",
   "scripts": {
